Layout dosyası düzenlendi. Birkac sayfanın arayuzu oluşturuldu.

--- a/BIBSI/Views/Home/Index.cshtml
+++ b/BIBSI/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "BİBSİ";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Ana Sayfa</h2>
+<h2>merhaba</h2>
+
+<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
 
