--- a/BIBSI/Views/Shared/_Layout.cshtml
+++ b/BIBSI/Views/Shared/_Layout.cshtml
@@ -3,6 +3,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="http://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet" />
+    <link href="~/Content/css/fonts.css" rel="stylesheet" />
     <link href="~/Content/css/normalize.css" rel="stylesheet" />
     <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/css/style.css" rel="stylesheet" />
@@ -10,9 +12,144 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div id="wrapper">
+        <div id="header-wrapper">
+            <div id="header" class="container">
+                <div id="logo">
+                    <h1>BİBSİ</h1>
+                    <h6>EN KOLAY İŞ BULMA SİTESİ</h6>
+                </div>
+                <ul id="account">
+                    <li><a href="#">Üye Ol</a></li>
+                    <li><a href="#">Üye Girişi</a></li>
+                </ul>
+
+            </div>
+        </div>
+        <div id="menu-wrapper">
+            <div id="menu" class="container">
+                <form action="" method="post">
+                    <ul>
+                        <li class="current_page_item"><a href="#">Anasayfa</a></li>
+                        <li><a href="/IsVeren">İş Veren</a></li>
+                        <li><a href="/Home/TumIlanlar">Tüm İş İlanları</a></li>
+                        <li><a href="/Home/Iletisim">İletişim</a></li>
+                        <li>
+                            <input type="text" id="tbIsArama" placeholder="Pozisyon, firma adı, sektör" />
+                            <select id="cmbxSehirler">
+                                <option>Ankara</option>
+                                <option>İstanbul</option>
+                                <option>Adana</option>
+                                <option>Trabzon</option>
+                                <option>Ankara</option>
+                                <option>Ankara</option>
+                            </select>
+                            <input id="btnIsAra" type="submit" value="İş Ara" />
+                        </li>
+
+                    </ul>
+                </form>
+            </div>
+            <!-- end #menu -->
+        </div>
+        <div id="page" class="container">
+            <div id="content">
+                @RenderBody()
+            </div>
+
+            <div id="sidebar">
+                <div class="box2">
+                    <div class="title">
+                        <h2>İş Kategorileri</h2>
+                    </div>
+                    <ul class="style2">
+                        <li><a href="#">Uzman</a></li>
+                        <li><a href="#">Yönetici</a></li>
+                        <li><a href="#">Yeni Mezun</a></li>
+                        <li><a href="#">İşçi</a></li>
+                        <li><a href="#">Hizmet Personeli</a></li>
+                        <li><a href="#">Stajyer</a></li>
+                        <li><a href="#">Engelli</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div id="portfolio-wrapper">
+            <div id="portfolio" class="container">
+                <div id="column1">
+                    <div class="title">
+                        <h2>Suspendisse lacus</h2>
+                    </div>
+                    <a href="#" class="image image-full"><img src="~/Content/images/pic06.jpg" alt="" /></a>
+                    <p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+                    <a href="#" class="icon icon-plus-sign button">Read More</a>
+                </div>
+                <div id="column2">
+                    <div class="title">
+                        <h2>Fusce ultrices</h2>
+                    </div>
+                    <a href="#" class="image image-full"><img src="~/Content/images/pic03.jpg" alt="" /></a>
+                    <p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+                    <a href="#" class="icon icon-plus-sign button">Read More</a>
+                </div>
+                <div id="column3">
+                    <div class="title">
+                        <h2>Etiam posuere</h2>
+                    </div>
+                    <a href="#" class="image image-full"><img src="~/Content/images/pic04.jpg" alt="" /></a>
+                    <p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+                    <a href="#" class="icon icon-plus-sign button">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <div id="footer-wrapper">
+            <div id="footer" class="container">
+                <div id="box1">
+                    <div class="title">
+                        <h2>Latest Post</h2>
+                    </div>
+                    <ul class="style1">
+                        <li><a href="#">Semper mod quis eget mi dolore</a></li>
+                        <li><a href="#">Quam turpis feugiat sit dolor</a></li>
+                        <li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+                        <li><a href="#">Consequat etiam lorem phasellus</a></li>
+                        <li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+                        <li><a href="#">Semper mod quisturpis nisi</a></li>
+                    </ul>
+                </div>
+                <div id="box2">
+                    <div class="title">
+                        <h2>Popular Links</h2>
+                    </div>
+                    <ul class="style1">
+                        <li><a href="#">Semper mod quis eget mi dolore</a></li>
+                        <li><a href="#">Quam turpis feugiat sit dolor</a></li>
+                        <li><a href="#">Amet ornare in hendrerit in lectus</a></li>
+                        <li><a href="#">Consequat etiam lorem phasellus</a></li>
+                        <li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+                        <li><a href="#">Semper mod quisturpis nisi</a></li>
+                    </ul>
+                </div>
+                <div id="box3">
+                    <div class="title">
+                        <h2>Follow Us</h2>
+                    </div>
+                    <p>Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet magna.</p>
+                    <ul class="contact">
+                        <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
+                        <li><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
+                        <li><a href="#" class="icon icon-dribbble"><span>Dribbble</span></a></li>
+                        <li><a href="#" class="icon icon-tumblr"><span>Tumblr</span></a></li>
+                        <li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
+                    </ul>
+                    <a href="#" class="icon icon-plus-sign button">Read More</a>
+                </div>
+            </div>
+        </div>
     </div>
+
     <script src="~/Content/js/jquery-3.2.1.min.js"></script>
     <script src="~/Content/js/bootstrap.min.js"></script>
     <script src="~/Content/js/script.js"></script>
