--- a/BIBSI/Views/Shared/_Layout.cshtml
+++ b/BIBSI/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
                     <h6>EN KOLAY İŞ BULMA SİTESİ</h6>
                 </div>
                 <ul id="account">
-                    <li><a href="#">Üye Ol</a></li>
-                    <li><a href="#">Üye Girişi</a></li>
+                    <li><a href="/Hesap/YeniUyelik">Üye Ol</a></li>
+                    <li><a href="/Hesap/Uyegirisi">Üye Girişi</a></li>
                 </ul>
 
             </div>
@@ -30,7 +30,7 @@
             <div id="menu" class="container">
                 <form action="" method="post">
                     <ul>
-                        <li class="current_page_item"><a href="#">Anasayfa</a></li>
+                        <li class="current_page_item"><a href="/">Anasayfa</a></li>
                         <li><a href="/IsVeren">İş Veren</a></li>
                         <li><a href="/Home/TumIlanlar">Tüm İş İlanları</a></li>
                         <li><a href="/Home/Iletisim">İletişim</a></li>
@@ -79,26 +79,26 @@
             <div id="portfolio" class="container">
                 <div id="column1">
                     <div class="title">
-                        <h2>Suspendisse lacus</h2>
+                        <h2>Nasıl CV Hazırlanır?</h2>
                     </div>
                     <a href="#" class="image image-full"><img src="~/Content/images/pic06.jpg" alt="" /></a>
-                    <p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+                    <p>asdadasdasd----------------------------------------------</p>
                     <a href="#" class="icon icon-plus-sign button">Read More</a>
                 </div>
                 <div id="column2">
                     <div class="title">
-                        <h2>Fusce ultrices</h2>
+                        <h2>Ofis Hayatı</h2>
                     </div>
                     <a href="#" class="image image-full"><img src="~/Content/images/pic03.jpg" alt="" /></a>
-                    <p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+                    <p>asdasdasd-------------------------------------------</p>
                     <a href="#" class="icon icon-plus-sign button">Read More</a>
                 </div>
                 <div id="column3">
                     <div class="title">
-                        <h2>Etiam posuere</h2>
+                        <h2>Staj Defteri</h2>
                     </div>
                     <a href="#" class="image image-full"><img src="~/Content/images/pic04.jpg" alt="" /></a>
-                    <p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+                    <p>asdasdasd-------------------------------------------</p>
                     <a href="#" class="icon icon-plus-sign button">Read More</a>
                 </div>
             </div>
@@ -108,7 +108,7 @@
             <div id="footer" class="container">
                 <div id="box1">
                     <div class="title">
-                        <h2>Latest Post</h2>
+                        <h2>Düzenlenme Aşamasında!</h2>
                     </div>
                     <ul class="style1">
                         <li><a href="#">Semper mod quis eget mi dolore</a></li>
@@ -121,7 +121,7 @@
                 </div>
                 <div id="box2">
                     <div class="title">
-                        <h2>Popular Links</h2>
+                        <h2>Düzenlenme Aşamasında!</h2>
                     </div>
                     <ul class="style1">
                         <li><a href="#">Semper mod quis eget mi dolore</a></li>
@@ -134,9 +134,8 @@
                 </div>
                 <div id="box3">
                     <div class="title">
-                        <h2>Follow Us</h2>
+                        <h2>Bizi Takip Edin</h2>
                     </div>
-                    <p>Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet magna.</p>
                     <ul class="contact">
                         <li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
                         <li><a href="#" class="icon icon-facebook"><span>Facebook</span></a></li>
@@ -144,7 +143,6 @@
                         <li><a href="#" class="icon icon-tumblr"><span>Tumblr</span></a></li>
                         <li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
                     </ul>
-                    <a href="#" class="icon icon-plus-sign button">Read More</a>
                 </div>
             </div>
         </div>
@@ -153,5 +151,7 @@
     <script src="~/Content/js/jquery-3.2.1.min.js"></script>
     <script src="~/Content/js/bootstrap.min.js"></script>
     <script src="~/Content/js/script.js"></script>
+    @RenderSection("scripts",false)
+
 </body>
 </html>
