--- a/BIBSI/Views/Home/Iletisim.cshtml
+++ b/BIBSI/Views/Home/Iletisim.cshtml
@@ -6,3 +6,11 @@
 
 <h2>İletişim</h2>
 
+@section scripts{
+    <script>
+        $("#menu form ul li").each(function () {
+            $(this).removeClass("current_page_item");
+        });
+        $("#menu form ul li:nth-child(4)").addClass("current_page_item");
+    </script>
+}
