--- a/BIBSI/Views/Home/Index.cshtml
+++ b/BIBSI/Views/Home/Index.cshtml
@@ -4,7 +4,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>merhaba</h2>
+<h2>Merhabalar Hocam</h2>
 
-<p>Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie.</p>
+<p>Sayfa şuanda geliştirme aşamasındadır. İçerikler ekleniyor ve veri tabanından veriler entegre ediliyor. Bu görüntü kısıtlı bir arayüz görüntüsüdür </p>
 
+@section scripts{
+    <script>
+        $("#menu form ul li").each(function () {
+            $(this).removeClass("current_page_item");
+        });
+        $("#menu form ul li:nth-child(1)").addClass("current_page_item");
+    </script>
+}
