--- a/BIBSI/Views/IsVeren/Index.cshtml
+++ b/BIBSI/Views/IsVeren/Index.cshtml
@@ -6,3 +6,11 @@
 
 <h2>İşverenler</h2>
 
+@section scripts{
+    <script>
+        $("#menu form ul li").each(function () {
+            $(this).removeClass("current_page_item");
+        });
+        $("#menu form ul li:nth-child(2)").addClass("current_page_item");
+    </script>
+}
