Arayuzde iyilestirmeler yapildi. Ek sayfalar olusturuldu

--- a/BIBSI/Views/Home/TumIlanlar.cshtml
+++ b/BIBSI/Views/Home/TumIlanlar.cshtml
@@ -1,16 +1,14 @@
 ﻿
 @{
     ViewBag.Title = "TumIlanlar";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout2.cshtml";
 }
 
 <h2>Tüm İş İlanları</h2>
 
 @section scripts{
-    <script>
-        $("#menu form ul li").each(function () {
-            $(this).removeClass("current_page_item");
-        });
-        $("#menu form ul li:nth-child(3)").addClass("current_page_item");
-    </script>
+  <script>
+      menuSec(3);
+</script>
+
     }
