--- a/BIBSI/Views/Shared/_Layout.cshtml
+++ b/BIBSI/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
         <div id="header-wrapper">
             <div id="header" class="container">
                 <div id="logo">
-                    <h1>BİBSİ</h1>
-                    <h6>EN KOLAY İŞ BULMA SİTESİ</h6>
+                    <img class="logo" src="~/Content/images/logo.png" alt="logo" />
+                    <h6 class="slogan">EN KOLAY İŞ BULMA SİTESİ</h6>
                 </div>
                 <ul id="account">
                     <li><a href="/Hesap/YeniUyelik">Üye Ol</a></li>
@@ -81,25 +81,25 @@
                     <div class="title">
                         <h2>Nasıl CV Hazırlanır?</h2>
                     </div>
-                    <a href="#" class="image image-full"><img src="~/Content/images/pic06.jpg" alt="" /></a>
-                    <p>asdadasdasd----------------------------------------------</p>
-                    <a href="#" class="icon icon-plus-sign button">Read More</a>
+                    <a href="https://cvlogin.com/tr/?gclid=CJWHq76u09MCFQIcGwodxXcFJw" target="_blank" class="image image-full"><img src="~/Content/images/CV.jpg" alt="" /></a>
+                    <p>İş arayanlar için CV hazırlanması elzem bir durumdur. İyi hazırlanmış bir CV iyi bir iş olanağı demektir. Aşşağıdaki buton ile size yardımcı olacak bir internet sayfasını ziyaret edebilirsiniz.</p>
+                    <a href="https://cvlogin.com/tr/?gclid=CJWHq76u09MCFQIcGwodxXcFJw" target="_blank" class="icon icon-plus-sign button">Devam</a>
                 </div>
                 <div id="column2">
                     <div class="title">
-                        <h2>Ofis Hayatı</h2>
+                        <h2>Ofis Hayatında Öneriler</h2>
                     </div>
-                    <a href="#" class="image image-full"><img src="~/Content/images/pic03.jpg" alt="" /></a>
-                    <p>asdasdasd-------------------------------------------</p>
-                    <a href="#" class="icon icon-plus-sign button">Read More</a>
+                    <a href="http://www.karel.com.tr/blog/mutlu-bir-hayati-icin-verimli-calismanin-9-yolu" target="_blank" class="image image-full"><img src="~/Content/images/picofis.jpg" alt="" /></a>
+                    <p>Eğer gün sonunda planladığınızdan daha az iş bitirdiğinizi düşünüyorsanız,gün sonunda daha çok işi bitirebilmek için dikkat edilmesi gereken basit kurallar elbette var.</p>
+                    <a href="http://www.karel.com.tr/blog/mutlu-bir-hayati-icin-verimli-calismanin-9-yolu" target="_blank" class="icon icon-plus-sign button">Devam</a>
                 </div>
                 <div id="column3">
                     <div class="title">
-                        <h2>Staj Defteri</h2>
+                        <h2>Staj Defteri Nasıl hazırlanır</h2>
                     </div>
-                    <a href="#" class="image image-full"><img src="~/Content/images/pic04.jpg" alt="" /></a>
-                    <p>asdasdasd-------------------------------------------</p>
-                    <a href="#" class="icon icon-plus-sign button">Read More</a>
+                    <a href="http://arelkariyer.arel.edu.tr/is-ve-staj/staj/staj-dosyasi-icin-sss" target="_blank" class="image image-full"><img src="~/Content/images/picbook.jpg" alt="" /></a>
+                    <p>Staj defteri staj yapılan kurumda kime imzalatılmalıdır? Staj defterini imzalayacak olan yetkili izne ayrılmışsa yerine başka bir yetkilinin imza atması mümkün müdür?Hepsinin cevabı...</p>
+                    <a href="http://arelkariyer.arel.edu.tr/is-ve-staj/staj/staj-dosyasi-icin-sss" target="_blank" class="icon icon-plus-sign button">Devam</a>
                 </div>
             </div>
         </div>
@@ -108,29 +108,19 @@
             <div id="footer" class="container">
                 <div id="box1">
                     <div class="title">
-                        <h2>Düzenlenme Aşamasında!</h2>
+                        <h2>MENÜ</h2>
                     </div>
                     <ul class="style1">
-                        <li><a href="#">Semper mod quis eget mi dolore</a></li>
-                        <li><a href="#">Quam turpis feugiat sit dolor</a></li>
-                        <li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-                        <li><a href="#">Consequat etiam lorem phasellus</a></li>
-                        <li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-                        <li><a href="#">Semper mod quisturpis nisi</a></li>
+                        <li><a href="#">Ana Sayfa</a></li>
+                        <li><a href="#">Üye Ol</a></li>
+                        <li><a href="#">İş Veren</a></li>
+                        <li><a href="#">Tüm İş ilanları</a></li>
+                        <li><a href="#">İletişim</a></li>
+                        <li><a href="#">Yardım</a></li>
                     </ul>
                 </div>
-                <div id="box2">
-                    <div class="title">
-                        <h2>Düzenlenme Aşamasında!</h2>
-                    </div>
-                    <ul class="style1">
-                        <li><a href="#">Semper mod quis eget mi dolore</a></li>
-                        <li><a href="#">Quam turpis feugiat sit dolor</a></li>
-                        <li><a href="#">Amet ornare in hendrerit in lectus</a></li>
-                        <li><a href="#">Consequat etiam lorem phasellus</a></li>
-                        <li><a href="#">Amet turpis, feugiat et sit amet</a></li>
-                        <li><a href="#">Semper mod quisturpis nisi</a></li>
-                    </ul>
+                <div class="hakkimizda">
+                    <p>BİBSİ bir YISİER AŞ. iştirakidir.Elektronik Yayıncılık ve İletişim Hizmetleri A.Ş. Özel İstihdam Bürosu Olarak 28/03/2017 itibari ile faaliyette bulunmak üzere, Türkiye İş Kurumu tarafından 28.03.2014 tarih ve 118598 sayılı karar uyarınca 170 nolu belge ile faaliyet göstermektedir. 4904 sayılı kanun uyarınca iş arayanlardan ücret alınması yasaktır.</p>
                 </div>
                 <div id="box3">
                     <div class="title">
@@ -151,7 +141,7 @@
     <script src="~/Content/js/jquery-3.2.1.min.js"></script>
     <script src="~/Content/js/bootstrap.min.js"></script>
     <script src="~/Content/js/script.js"></script>
-    @RenderSection("scripts",false)
+    @RenderSection("scripts", false)
 
 </body>
 </html>
