--- a/BIBSI/Content/css/style.css
+++ b/BIBSI/Content/css/style.css
@@ -592,3 +592,16 @@ ul.contact {
     border-radius:10px;
     background:#E5E5E5;
 }
+.logo {
+    float :left ;
+}
+.slogan{
+    float:left;
+    line-height : 150px;
+    font-size:20px;
+}
+.hakkimizda{
+    float :left;
+    width :330px;
+    text-align:justify;
+}
