--- a/BIBSI/Views/Home/Iletisim.cshtml
+++ b/BIBSI/Views/Home/Iletisim.cshtml
@@ -1,16 +1,14 @@
 ﻿
 @{
     ViewBag.Title = "Iletisim";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout2.cshtml";
 }
 
 <h2>İletişim</h2>
 
 @section scripts{
     <script>
-        $("#menu form ul li").each(function () {
-            $(this).removeClass("current_page_item");
-        });
-        $("#menu form ul li:nth-child(4)").addClass("current_page_item");
+        menuSec(4);
     </script>
+
 }
