--- a/BIBSI/Views/Home/Index.cshtml
+++ b/BIBSI/Views/Home/Index.cshtml
@@ -10,9 +10,6 @@
 
 @section scripts{
     <script>
-        $("#menu form ul li").each(function () {
-            $(this).removeClass("current_page_item");
-        });
-        $("#menu form ul li:nth-child(1)").addClass("current_page_item");
+        menuSec(1);
     </script>
 }
