Migration eklendi. Veritabanında güncelleme yapıldı.

--- a/BIBSI/Views/IsVeren/Index.cshtml
+++ b/BIBSI/Views/IsVeren/Index.cshtml
@@ -4,12 +4,5 @@
     Layout = "~/Views/Shared/_Layout2.cshtml";
 }
 
-<h2>İş Veren</h2>
-
-@section scripts{
-   <script>
-       menuSec(2);
-</script>
-
-}
+<h2>Index</h2>
 
