Layout'taki pozisyonlar listelendi.

--- a/BIBSI/Views/Hesap/UyeGirisi.cshtml
+++ b/BIBSI/Views/Hesap/UyeGirisi.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BIBSI.Models.UyeGirisiModel
 @{
     ViewBag.Title = "UyeGirisi";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout2.cshtml";
 }
 
 <h2>Üye Girişi</h2>
