--- a/BIBSI/Views/Hesap/YeniUyelik.cshtml
+++ b/BIBSI/Views/Hesap/YeniUyelik.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "YeniUyelik";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout2.cshtml";
 }
 
 <h2>Yeni Üyelik Oluştur</h2>
