--- a/BIBSI/Views/Home/Index.cshtml
+++ b/BIBSI/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Merhabalar Hocam</h2>
+<h2>BİBSİ'ye Hoş Geldiniz</h2>
 
-<p>Sayfa şuanda geliştirme aşamasındadır. İçerikler ekleniyor ve veri tabanından veriler entegre ediliyor. Bu görüntü kısıtlı bir arayüz görüntüsüdür </p>
+<p>Bibsi; Edirne'den Kars'a, Karadeniz'in kuzeyinden Akdeniz'in batısına kadar tüm Türkiye'de rahatlıkla istediğiniz her sektör ve alanda, kullanım kolaylığıyla iş arayabileceğiniz, binlerce iş ilanları içerisinden kendinize ve kriterlerinize uygun iş bulmanıza yardımcı olacak ücretsiz bir iş bulma sitesidir.  </p>
 
 @section scripts{
     <script>
