--- a/BIBSI/Views/Home/Index.cshtml
+++ b/BIBSI/Views/Home/Index.cshtml
@@ -5,8 +5,11 @@
 }
 
 <h2>BİBSİ'ye Hoş Geldiniz</h2>
-
 <p>Bibsi; Edirne'den Kars'a, Karadeniz'in kuzeyinden Akdeniz'in batısına kadar tüm Türkiye'de rahatlıkla istediğiniz her sektör ve alanda, kullanım kolaylığıyla iş arayabileceğiniz, binlerce iş ilanları içerisinden kendinize ve kriterlerinize uygun iş bulmanıza yardımcı olacak ücretsiz bir iş bulma sitesidir.  </p>
+<div>
+    <a class="image image-full"><img src="~/Content/images/anasayfa.jpg" alt="" /></a>
+</div>
+
 
 @section scripts{
     <script>
